Fix canvas background scroll on mobile

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ html, body {
 }
 
 body {
+    background: var(--main-bg-color);
     overflow-x: hidden;
 }
 
